begin bot development, start command handling - added commands folder - more configuration in main file - added bot configuration file `src/config.json`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,11 +17,11 @@
 		"ecmaVersion": 2019
 	},
 	"rules": {
-        "indent": ["error", "tab"],
+        // "indent": ["error", "tab"],
         "semi": ["error", "always"],
         "prefer-const": "error",
         "no-empty-function": "error",
         "block-scoped-var": "warn",
-        "class-methods-use-this": "warn"
+		"class-methods-use-this": "warn"
 	}
 }
