--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.1",
+    "opusscript": "^0.0.7",
+    "ytdl-core": "^4.2.1"
   }
 }
