--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
   "author": "Collin Kleest <collinkleest@gmail.com>",
   "license": "MIT",
   "private": false,
-  "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.14.0",
-    "nodemon": "^2.0.6",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
-  },
   "dependencies": {
-    "axios": "^0.21.1",
-    "discord.js": "^12.5.1",
-    "express": "^4.17.1",
-    "ffmpeg-static": "^4.3.0",
-    "opusscript": "^0.0.7",
-    "ytdl-core": "^4.5.0"
+    "axios": "0.21.1",
+    "discord.js": "12.5.1",
+    "express": "4.17.1",
+    "ffmpeg-static": "4.3.0",
+    "opusscript": "0.0.8",
+    "ytdl-core": "4.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.13",
+    "@types/node": "16.6.0",
+    "@typescript-eslint/eslint-plugin": "4.8.2",
+    "@typescript-eslint/parser": "4.8.2",
+    "dotenv": "8.2.0",
+    "eslint": "7.14.0",
+    "nodemon": "2.0.6",
+    "rimraf": "3.0.2",
+    "ts-node": "9.0.0",
+    "typescript": "4.1.2"
   }
 }
